--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -12,9 +12,9 @@
         Credits
 
         <ul>
-          <li>Backend and API: Justin Karneges</li>
-          <li>Website development: Katsuyuki Ohmuro</li>
-          <li>Website design: Marko Bijelic</li>
+          <li>Backend and API: Justin Karneges &lt;justin@fanout.io&gt;</li>
+          <li>Website development: Katsuyuki Ohmuro &lt;harmony7@pex2.jp&gt;</li>
+          <li>Website design: Marko B. &lt;mb@hipinspire.com&gt;</li>
         </ul>
     </p>
     <p>
