--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -54,7 +54,7 @@
 <div class="footer container fixed-height">
     <div class="row">
         <div class="message">
-            Inspired by <a href="http://requestb.in/">Requestbin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
+            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
         </div>
     </div>
 </div>
