--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>WebhookInbox</title>
-    <link rel="shortcut icon" href="/static/images/favicon.ico" />
-    <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
-    <!--[if lte IE 8]>
-    <script src="/static/scripts/json2.js"></script>
-    <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="/static/scripts/pollymer-1.0.0.js"></script>
-    <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
-    <script src="/static/scripts/WebhookInboxViewer.js"></script>
+{% extends "website/l2_base.html" %}
+{% block google_analytics %}
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,10 +9,12 @@
       ga('create', 'UA-42597888-1', 'webhookinbox.com');
       ga('send', 'pageview');
     </script>
+{% endblock %}
+{% block head_extra %}
     <base href="/" />
-</head>
-<body>
+{% endblock %}
 
+{% block header %}
 <div class="header container fixed-height">
     <div class="row">
         <div class="links">
@@ -33,7 +24,9 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
+{% block content_home %}
 <div class="description container fixed-height">
     <div class="row">
         <div class="logo">
@@ -59,14 +52,5 @@
         </div>
     </div>
 </div>
-
-<div class="footer container fixed-height">
-    <div class="row">
-        <div class="message">
-            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
-        </div>
-    </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
+{% block content_container %}{% endblock %}
