--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WebhookInbox{% block title_suffix %}{% endblock %}</title>
+    <title>WebhookInbox {% block title_suffix %}{% endblock %}</title>
     <link rel="shortcut icon" href="/static/images/favicon.ico" />
+    {% block head_stylesheet %}
     <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
+    {% endblock %}
     <!--[if lte IE 8]>
     <script src="/static/scripts/json2.js"></script>
     <![endif]-->
@@ -11,10 +13,13 @@
     <script src="/static/scripts/pollymer-1.0.0.js"></script>
     <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
     <script src="/static/scripts/WebhookInboxViewer.js"></script>
+    {% block google_analytics %}{% endblock %}
+    {% block head_extra %}{% endblock %}
 </head>
 <body>
 
-<div class="header header80 container fixed-height">
+{% block header %}
+<div class="header container {% block header_class %}header80 fixed-height{% endblock %}">
     <div class="row">
         <div class="logo">
             <a href="/"><img src="/static/images/logo.png" /></a>
@@ -26,7 +31,11 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
+{% block content_home %}{% endblock %}
+
+{% block content_container %}
 <div class="l2-content container">
     <div class="row">
         <div class="content">
@@ -37,7 +46,9 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
+{% block footer %}
 <div class="footer container fixed-height">
     <div class="row">
         <div class="message">
@@ -45,6 +56,7 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
 </body>
 </html>
