arrow indication of which page the user is on #3

--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -1,5 +1,5 @@
 {% extends "website/l2_base.html" %}
-
+{% block nav_contact %}active{% endblock %}
 {% block title_suffix %} - Contact Us{% endblock %}
 
 {% block content %}
