--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -14,17 +14,8 @@
     <base href="/" />
 {% endblock %}
 
-{% block header %}
-<div class="header container fixed-height">
-    <div class="row">
-        <div class="links">
-            <a href="/docs/api.html">API</a>
-            <a href="/about/">About</a>
-            <a href="/contact/">Contact</a>
-        </div>
-    </div>
-</div>
-{% endblock %}
+{% block header_class %}{% endblock %}
+{% block header_log %}{% endblock %}
 
 {% block content_home %}
 <div class="description container fixed-height">
