--- a/website/static/styles/WebhookInboxViewer.css
+++ b/website/static/styles/WebhookInboxViewer.css
@@ -385,3 +385,34 @@ a img {
     color: #9599a1;
     text-shadow: 1px 1px 2px #000;
 }
+
+.copy_clip_box {
+    font-size: 11px;
+    margin-left: 15px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    text-transform: lowercase;
+}
+
+ .copy_clip_box{
+    border:1px solid #565866;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-family:arial, helvetica, sans-serif;
+    padding: 7px 6px; 
+    text-decoration:none; 
+    display:inline-block;
+    text-shadow: 0px 1px 0 rgba(0,0,0,1);
+    font-weight:bold; 
+    color: #FFFFFF;
+    background-color: #747888; background-image: -webkit-gradient(linear, left top, left bottom, from(#747888), to(#646879));
+    background-image: -webkit-linear-gradient(top, #747888, #646879);
+    background-image: -moz-linear-gradient(top, #747888, #646879);
+    background-image: -ms-linear-gradient(top, #747888, #646879);
+    background-image: -o-linear-gradient(top, #747888, #646879);
+    background-image: linear-gradient(to bottom, #747888, #646879);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#747888, endColorstr=#646879);
+}
+.target-info{width: 500px;}
+.targrt-left{display: inline-block; float: left;}
+.targrt-right{display: inline-block; float: left;}
