--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -10,6 +10,8 @@
     <script src="/static/scripts/json2.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="/static/scripts/ZeroClipboard.js"></script>
     <script src="/static/scripts/pollymer-1.0.0.js"></script>
     <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
     <script src="/static/scripts/WebhookInboxViewer.js"></script>
