Changed css for headers, added json formatter to diplay json objects and added function to find json objects

--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -6,10 +6,12 @@
     {% block head_stylesheet %}
     <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
     {% endblock %}
+    <link href="/static/styles/json-formatter.min.css" rel="stylesheet" />
     <!--[if lte IE 8]>
     <script src="/static/scripts/json2.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+    <script src="/static/scripts/json-formatter.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="/static/scripts/ZeroClipboard.js"></script>
     <script src="/static/scripts/pollymer-1.0.0.js"></script>
