--- a/website/static/templates/view-template.html
+++ b/website/static/templates/view-template.html
@@ -66,7 +66,14 @@
                     <div class="entry-inner-body">
                         <div class="entry-item" ng-show="entry.body">
                             <div class="label">POST CONTENT:</div>
-                            <div class="value">{{entry.body}}</div>
+                             <div class="value" > 
+                                <div ng-if="IsJsonString(entry.body)">
+                                    <json-formatter json="entry.body" open="1"></json-formatter>
+                                </div>
+                                <div ng-if="!IsJsonString(entry.body)">
+                                     <div class="value">{{ entry.body }}</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="entry-item" ng-show="entry.query">
                             <div class="label">QUERY:</div>
