added width for baisc htmls

--- a/website/static/styles/WebhookInbox.css
+++ b/website/static/styles/WebhookInbox.css
@@ -172,6 +172,7 @@ a img {
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
+    width: 850px;
 }
 
 .l2-content .content {
