--- a/website/static/styles/WebhookInbox.css
+++ b/website/static/styles/WebhookInbox.css
@@ -60,30 +60,7 @@ a img {
     text-align: right;
 }
 
-.header .links ul { list-style: none;}
-.header .links ul li {
-    display: inline-block;
-    position: relative;
-}
-
-
-.header .links ul li > .arrow{
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    top: -35px;
-    display: none;
-    margin-left: 5px;
-    left: 50%;
-    border-left: 11px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid black;
-}
-
-.header .links ul li.active > .arrow{
-    display: inline-block;
-}
-.header .links ul li > a {
+.header .links > a {
     color: #9599a1;
     text-shadow: 1px 1px 2px #000;
     margin-left: 35px;
@@ -172,7 +149,6 @@ a img {
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
-    width: 850px;
 }
 
 .l2-content .content {
