--- a/website/static/styles/WebhookInboxViewer.css
+++ b/website/static/styles/WebhookInboxViewer.css
@@ -21,12 +21,6 @@ a img {
     border: none;
 }
 
-.delete-inbox {
-    width: 20px;
-    height: 20px; 
-    margin-top: 10px;
-}
-
 .container {
     padding: 0 40px;
 }
@@ -60,29 +54,7 @@ a img {
     text-align: right;
 }
 
-.header .links ul { list-style: none;}
-.header .links ul li {
-    display: inline-block;
-    position: relative;
-}
-
-.header .links ul li > .arrow{
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    top: -32px;
-    display: none;
-    margin-left: 5px;
-    left: 60%;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid black;
-}
-
-.header .links ul li.active > .arrow{
-    display: inline-block;
-}
-.header .links ul li > a {
+.header .links > a {
     color: #9599a1;
     text-shadow: 1px 1px 2px #000;
     margin-left: 35px;
@@ -180,7 +152,7 @@ a img {
     -moz-transition: all 0.5s linear;
     -o-transition: all 0.5s linear;
     transition: all 0.5s linear;
-    min-height: 100px;
+    max-height: 300px;
     left: 0;
 }
 
@@ -249,17 +221,6 @@ a img {
 
 .entry-item {
     margin-bottom: 10px;
-}
-
-.item-table-key {
-    width: 150px;
-    font: 12px Helvetica,Arial;
-}
-
-
-.item-table-value {
-    width: 600px;
-    font: 12px Helvetica,Arial;
 }
 
 .item-label {
@@ -385,34 +346,3 @@ a img {
     color: #9599a1;
     text-shadow: 1px 1px 2px #000;
 }
-
-.copy_clip_box {
-    font-size: 11px;
-    margin-left: 15px;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-    text-transform: lowercase;
-}
-
- .copy_clip_box{
-    border:1px solid #565866;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    font-family:arial, helvetica, sans-serif;
-    padding: 7px 6px; 
-    text-decoration:none; 
-    display:inline-block;
-    text-shadow: 0px 1px 0 rgba(0,0,0,1);
-    font-weight:bold; 
-    color: #FFFFFF;
-    background-color: #747888; background-image: -webkit-gradient(linear, left top, left bottom, from(#747888), to(#646879));
-    background-image: -webkit-linear-gradient(top, #747888, #646879);
-    background-image: -moz-linear-gradient(top, #747888, #646879);
-    background-image: -ms-linear-gradient(top, #747888, #646879);
-    background-image: -o-linear-gradient(top, #747888, #646879);
-    background-image: linear-gradient(to bottom, #747888, #646879);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#747888, endColorstr=#646879);
-}
-.target-info{width: 500px;}
-.targrt-left{display: inline-block; float: left;}
-.targrt-right{display: inline-block; float: left;}
