--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,5 +1,16 @@
-{% extends "website/l2_base.html" %}
-{% block google_analytics %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>WebhookInbox</title>
+    <link rel="shortcut icon" href="/static/images/favicon.ico" />
+    <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
+    <!--[if lte IE 8]>
+    <script src="/static/scripts/json2.js"></script>
+    <![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+    <script src="/static/scripts/pollymer-1.0.0.js"></script>
+    <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
+    <script src="/static/scripts/WebhookInboxViewer.js"></script>
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -9,15 +20,20 @@
       ga('create', 'UA-42597888-1', 'webhookinbox.com');
       ga('send', 'pageview');
     </script>
-{% endblock %}
-{% block head_extra %}
     <base href="/" />
-{% endblock %}
+</head>
+<body>
 
-{% block header_class %}{% endblock %}
-{% block header_log %}{% endblock %}
+<div class="header container fixed-height">
+    <div class="row">
+        <div class="links">
+            <a href="/docs/api.html">API</a>
+            <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
+        </div>
+    </div>
+</div>
 
-{% block content_home %}
 <div class="description container fixed-height">
     <div class="row">
         <div class="logo">
@@ -43,5 +59,14 @@
         </div>
     </div>
 </div>
-{% endblock %}
-{% block content_container %}{% endblock %}
+
+<div class="footer container fixed-height">
+    <div class="row">
+        <div class="message">
+            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
+        </div>
+    </div>
+</div>
+
+</body>
+</html>
