--- a/website/templates/website/view.html
+++ b/website/templates/website/view.html
@@ -1,20 +1,48 @@
-{% extends "website/l2_base.html" %}
-{% block title_suffix %}Viewer{% endblock %}
-{% block head_stylesheet %}<link href="/static/styles/WebhookInboxViewer.css" rel="stylesheet" />{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>WebhookInbox Viewer</title>
+    <link rel="shortcut icon" href="/static/images/favicon.ico" />
+    <link href="/static/styles/WebhookInboxViewer.css" rel="stylesheet" />
+    <!--[if lte IE 8]>
+    <script src="/static/scripts/json2.js"></script>
+    <![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+    <script src="/static/scripts/pollymer-1.0.0.js"></script>
+    <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
+    <script src="/static/scripts/WebhookInboxViewer.js"></script>
+    <script>
+        window.serverData = { webhookId: "{{ inbox_id }}" };
+    </script>
+</head>
+<body>
 
-{% block head_extra %}
-<script>
-    window.serverData = { webhookId: "{{ inbox_id }}" };
-</script>
-{% endblock %}
-
-{% block header_class %} wi-viewer {% endblock %}
-
-{% block content_home %}
 <div class="wi-viewer">
-    <div ng-app="WebhookInboxViewer" ng-controller="WebhookInboxCtrl" ng-include="'/static/templates/view-template.html'">
+<div class="header container">
+    <div class="row">
+        <div class="logo">
+            <a href="/"><img src="/static/images/logo.png" /></a>
+        </div>
+        <div class="links">
+            <a href="/docs/api.html">API</a>
+            <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
+        </div>
     </div>
 </div>
-{% endblock %}
 
-{% block content_container %}{% endblock %}
+<div ng-app="WebhookInboxViewer" ng-controller="WebhookInboxCtrl" ng-include="'/static/templates/view-template.html'">
+</div>
+
+<div class="footer container">
+    <div class="row">
+        <div class="message">
+            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
+        </div>
+    </div>
+</div>
+
+</div>
+
+</body>
+</html>
