--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
+{% load staticfiles %}<!DOCTYPE html>
 <html>
 <head>
     <title>WebhookInbox{% block title_suffix %}{% endblock %}</title>
-    <link rel="shortcut icon" href="/static/images/favicon.ico" />
-    <link href="/static/styles/WebhookInbox.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
+    <link href="{% static 'styles/WebhookInbox.css' %}" rel="stylesheet" />
     <!--[if lte IE 8]>
-    <script src="/static/scripts/json2.js"></script>
+    <script src="{% static 'scripts/json2.js' %}"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="/static/scripts/pollymer-1.0.0.js"></script>
-    <script src="/static/scripts/WebhookInboxViewer.config.js"></script>
-    <script src="/static/scripts/WebhookInboxViewer.js"></script>
+    <script src="{% static 'scripts/pollymer-1.0.0.js' %}"></script>
+    <script src="{% static 'scripts/WebhookInboxViewer.config.js' %}"></script>
+    <script src="{% static 'scripts/WebhookInboxViewer.js' %}"></script>
 </head>
 <body>
 
 <div class="header header80 container fixed-height">
     <div class="row">
         <div class="logo">
-            <a href="/"><img src="/static/images/logo.png" /></a>
+            <a href="/"><img src="{% static 'images/logo.png' %}" /></a>
         </div>
         <div class="links">
             <a href="/docs/api.html">API</a>
@@ -41,7 +41,7 @@
 <div class="footer container fixed-height">
     <div class="row">
         <div class="message">
-            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2013 <a href="http://fanout.io/">Fanout, Inc</a>.
+            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2015 <a href="http://fanout.io/">Fanout, Inc</a>.
         </div>
     </div>
 </div>
