--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -8,8 +8,10 @@
     <script src="{% static 'scripts/json2.js' %}"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="{% static 'scripts/pollymer-1.0.0.js' %}"></script>
-    <script src="{% static 'scripts/WebhookInboxViewer.config.js' %}"></script>
+    <script src="{% static 'scripts/pollymer-1.1.1.js' %}"></script>
+    <script>
+        window.serverData = { apiEndpoint: "{{ api_base_uri }}", maxResults: 20, webhookId: "{{ inbox_id }}" };
+    </script>
     <script src="{% static 'scripts/WebhookInboxViewer.js' %}"></script>
 </head>
 <body>
