--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
     <script src="{% static 'scripts/pollymer-1.1.1.js' %}"></script>
     <script>
-        window.serverData = { apiEndpoint: "{{ api_base_uri }}", maxResults: 20, webhookId: "{{ inbox_id }}" };
+        window.serverData = { apiEndpoint: "{{ api_base_uri }}", maxResults: 20 };
     </script>
     <script src="{% static 'scripts/WebhookInboxViewer.js' %}"></script>
 </head>
