--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,18 +1,7 @@
-{% load staticfiles %}<!DOCTYPE html>
-<html>
-<head>
-    <title>WebhookInbox</title>
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
-    <link href="{% static 'styles/WebhookInbox.css' %}" rel="stylesheet" />
-    <!--[if lte IE 8]>
-    <script src="{% static 'scripts/json2.js' %}"></script>
-    <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="{% static 'scripts/pollymer-1.1.1.js' %}"></script>
-    <script>
-        window.serverData = { apiEndpoint: "{{ api_base_uri }}", maxResults: 20 };
-    </script>
-    <script src="{% static 'scripts/WebhookInboxViewer.js' %}"></script>
+{% extends 'website/base.html' %}
+{% load staticfiles %}
+
+{% block head_extra %}
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,9 +12,9 @@
       ga('send', 'pageview');
     </script>
     <base href="/" />
-</head>
-<body>
+{% endblock %}
 
+{% block body_main %}
 <div class="header container fixed-height">
     <div class="row">
         <div class="links">
@@ -61,14 +50,4 @@
         </div>
     </div>
 </div>
-
-<div class="footer container fixed-height">
-    <div class="row">
-        <div class="message">
-            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2015 <a href="http://fanout.io/">Fanout, Inc</a>.
-        </div>
-    </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
