--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -1,21 +1,7 @@
-{% load staticfiles %}<!DOCTYPE html>
-<html>
-<head>
-    <title>WebhookInbox{% block title_suffix %}{% endblock %}</title>
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
-    <link href="{% static 'styles/WebhookInbox.css' %}" rel="stylesheet" />
-    <!--[if lte IE 8]>
-    <script src="{% static 'scripts/json2.js' %}"></script>
-    <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
-    <script src="{% static 'scripts/pollymer-1.1.1.js' %}"></script>
-    <script>
-        window.serverData = { apiEndpoint: "{{ api_base_uri }}", maxResults: 20 };
-    </script>
-    <script src="{% static 'scripts/WebhookInboxViewer.js' %}"></script>
-</head>
-<body>
+{% extends 'website/base.html' %}
+{% load staticfiles %}
 
+{% block body_main %}
 <div class="header header80 container fixed-height">
     <div class="row">
         <div class="logo">
@@ -39,14 +25,4 @@
         </div>
     </div>
 </div>
-
-<div class="footer container fixed-height">
-    <div class="row">
-        <div class="message">
-            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2015 <a href="http://fanout.io/">Fanout, Inc</a>.
-        </div>
-    </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
