--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -25,7 +25,7 @@
 <div class="footer container fixed-height">
     <div class="row">
         <div class="message">
-            Inspired by <a href="http://requestb.in/">RequestBin</a>, &copy;2015 <a href="http://fanout.io/">Fanout, Inc</a>.
+            &copy;2016 <a href="http://fanout.io/">Fanout, Inc</a>.
         </div>
     </div>
 </div>
