Packages migration to latest version. Code adjust.

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
 <head>
     <title>WebhookInbox{% block title_suffix %}{% endblock %}</title>
