--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,5 +1,5 @@
 {% extends 'website/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block head_extra %}
     {% if not debug and ga_id %}
