--- a/website/templates/website/l2_base.html
+++ b/website/templates/website/l2_base.html
@@ -1,5 +1,5 @@
 {% extends 'website/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block body_main %}
 <div class="header header80 container fixed-height">
